# brain

./: .gitignore  .travis.yml  Brain.cabal  License.txt  README.md  brain  brain.hs  travis.yml
lib/: Brain.hs  BrainParser.hs
runner/: BrainRunner.hs  Main.hs
src/: Brain.hs  BrainTrans.hs  brain  brain.hs  brainRunner.hs  test.bf
test/: brainTest.hs  testHello.sh
