-- Brainfuck interpreter written by allonsy

name:                brain
version:             0.1.0.0
synopsis:            A brainfuck interpreter written in haskell
-- description:
-- license:
license-file:        License.txt
author:              Allonsy
maintainer:          linuxbash8@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs: src
  exposed-modules:
    Brain
  build-depends:
    base
    ,transformers
  default-language: Haskell2010
  ghc-options:

executable brain
  main-is: brainRunner.hs
  -- other-modules:
  -- other-extensions:
  build-depends:
    base
    ,transformers
    ,brain
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite brainTest
  hs-source-dirs: test
  main-is: brainTest.hs
  type: exitcode-stdio-1.0
  build-depends:
    base
   ,brain
   ,process >= 1.4
   ,hspec
   ,QuickCheck
   ,transformers
  default-language: Haskell2010
  ghc-options:
